Fixed Spacing Issue
its fixed. I'm not sure I like it but it is.

--- a/cs3220/public_html/TermProject/apeCss.css
+++ b/cs3220/public_html/TermProject/apeCss.css
@@ -1,16 +1,18 @@
+.header{
+    height:4%;
+}
 body{
     background-color:darkgray;
     margin:0;
-    height:100%;
+    height:96%;
 }
 .content{
     flex-direction: row;
     border-top:5px solid black;
-    border-bottom:5px solid black;
+    border-bottom:7px solid black;
     padding: 0;
     background: #ffffff;
     margin:0;
-    height: 100%;
 }
 .nav{
     background: #ffffff;
@@ -38,6 +40,7 @@ body{
     flex-direction: row;
 }
 .semester{
+    text-align: center;
     flex:1;
     margin:5;
 }
@@ -69,7 +72,5 @@ body{
 }
 #ape-lower-right{
     border-top:2px solid black;
-    padding-top:5;
-    padding-left: 5;
     flex:1;
 }
