--- a/cs3220/public_html/TermProject/myCss.css
+++ b/cs3220/public_html/TermProject/myCss.css
@@ -1,14 +1,17 @@
+html{
+    height: 100%
+}
 body{
     background-color: #000099;
     margin: auto;
-    height:100%;
-    
+    height:90%;
 }
 .header{
     border-bottom: 5px solid black;
     text-align: center;
     padding-bottom: 5;
-    color: #FFFFFF
+    color: #FFFFFF;
+    max-height: 100px;
 }
 .content{
     height:100%;
@@ -33,6 +36,7 @@ body{
 
 }
 .footer{
+    color:aliceblue;
     border-top: 5px solid black;
     padding-top: 5;
     padding-left:5;
